--- a/homework/hw2/Hw2-Written.html
+++ b/homework/hw2/Hw2-Written.html
@@ -208,7 +208,7 @@ proj_theme &lt;- theme(plot.background = element_rect(fill = &quot;#1e2936&quot;
 <div id="a" class="section level2">
 <h2>1a</h2>
 <blockquote>
-<p>What is the first principal component <span class="math inline">\(\omega_1\)</span>? Draw the first principal component direction <span class="math inline">\(\omega_1\)</span> on the plot, anchored at the origin.</p>
+<p>What is the first principal component <span class="math inline">\(\omega_1\)</span>?</p>
 </blockquote>
 <p><strong>(Step 1) Find the mean of the data.</strong></p>
 <p><span class="math display">\[ m = \frac{1}{4} \begin{bmatrix} 0 \\ 2 \end{bmatrix}
@@ -232,11 +232,14 @@ proj_theme &lt;- theme(plot.background = element_rect(fill = &quot;#1e2936&quot;
 \frac{-1}{3} &amp; \frac{2}{3} - \lambda \\
 \end{pmatrix} = \left| \left(\frac{2}{3} - \lambda\right) \left(\frac{2}{3} - \lambda\right) - \frac{1}{3}\left(\frac{1}{3}\right) \right|\]</span> <span class="math display">\[\implies \frac{4}{9} - \frac{2}{3}\lambda - \frac{2}{3}\lambda + \lambda^2 = 0\]</span> <span class="math display">\[\implies \frac{3}{9} - \frac{4}{3}\lambda + \lambda^2 = 0\]</span> <span class="math display">\[\implies \frac{1}{3} - \frac{4}{3}\lambda + \lambda^2 = 0\]</span></p>
 <p><span class="math display">\[\implies (\lambda - 1)(\lambda - \frac{1}{3}) = 0\]</span> which gives us:</p>
-<p><span class="math display">\[\omega_1 = \begin{bmatrix} -0.707  \\
-0.707 \\
+<p><span class="math display">\[\omega_1 = \begin{bmatrix} -\frac{\sqrt{2}}{2}  \\
+\frac{\sqrt{2}}{2} \\
 \end{bmatrix}\]</span></p>
-<pre class="r"><code>w1 &lt;- data.frame(x = c(-0.707, 0),
-                 y = c(0.707, 0))
+<blockquote>
+<p>Draw the first principal component direction <span class="math inline">\(\omega_1\)</span> on the plot, anchored at the origin.</p>
+</blockquote>
+<pre class="r bg-success"><code>w1 &lt;- data.frame(x = c(-sqrt(2)/2, 0),
+                 y = c(sqrt(2)/2, 0))
 
 calc_slope &lt;- function(x, y) {
   
@@ -275,7 +278,151 @@ ggplot() +
   xlim(-3, 3) +
   ylim(-3, 3) +
   proj_theme</code></pre>
-<p><img src="Hw2-Written_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
+<p><img src="Hw2-Written_files/figure-html/unnamed-chunk-3-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="a-1" class="section level2">
+<h2>2a</h2>
+<blockquote>
+<p>Start from initial cluster centers c1 = 0, c2 = 5, c3 = 10. Show your steps for all iterations: (1) the cluster assignments y1, · · · , y9; (2) the updated cluster centers at the end of that iteration.</p>
+</blockquote>
+<table>
+<colgroup>
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>Iteration/step</th>
+<th>Cluster 1</th>
+<th>Cluster 2</th>
+<th>Cluster 3</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>0: initialize clusters</td>
+<td><span class="math inline">\(c_1\)</span> = 0</td>
+<td><span class="math inline">\(c_2\)</span> = 5</td>
+<td><span class="math inline">\(c_3\)</span> = 10</td>
+</tr>
+<tr class="even">
+<td>0: assignment</td>
+<td><span class="math inline">\(x_1\)</span>: {1}</td>
+<td><span class="math inline">\(x_2, x_3, x_4, x_5\)</span>: {4, 5, 6, 7}</td>
+<td><span class="math inline">\(x_6, x_7, x_8, x_9\)</span>: {8, 10, 12, 14}</td>
+</tr>
+<tr class="odd">
+<td>1-1: update means</td>
+<td><span class="math inline">\(c_1\)</span> = 1</td>
+<td><span class="math inline">\(c_2\)</span> = 5.5</td>
+<td><span class="math inline">\(c_3\)</span> = 11</td>
+</tr>
+<tr class="even">
+<td>1-2: assignment</td>
+<td><span class="math inline">\(x_1\)</span>: {1}</td>
+<td><span class="math inline">\(x_2, x_3, x_4, x_5, x_6\)</span>: {4, 5, 6, 7, 8}</td>
+<td><span class="math inline">\(x_7, x_8, x_9\)</span>: {10, 12, 14}</td>
+</tr>
+<tr class="odd">
+<td>2-1: update means</td>
+<td><span class="math inline">\(c_1\)</span> = 1</td>
+<td><span class="math inline">\(c_2\)</span> = 6</td>
+<td><span class="math inline">\(c_3\)</span> = 12</td>
+</tr>
+<tr class="even">
+<td>2-2: assignment</td>
+<td><span class="math inline">\(x_1\)</span>: {1}</td>
+<td><span class="math inline">\(x_2, x_3, x_4, x_5, x_6\)</span>: {4, 5, 6, 7, 8}</td>
+<td><span class="math inline">\(x_7, x_8, x_9\)</span>: {10, 12, 14}</td>
+</tr>
+<tr class="odd">
+<td>3-1: update means</td>
+<td><span class="math inline">\(c_1\)</span> = 1</td>
+<td><span class="math inline">\(c_2\)</span> = 6</td>
+<td><span class="math inline">\(c_3\)</span> = 12</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="b" class="section level2">
+<h2>2b</h2>
+<blockquote>
+<p>How many iterations does it take for k-means algorithm to converge (i.e., number of iterations includes all iterations you perform to find convergence)? What is the reconstruction error (i.e., distortion measure J, equation 9.1 of the Bishop’s textbook) at the end of that iteration?</p>
+</blockquote>
+<p><strong>3 iterations.</strong></p>
+<p><strong>Distortion measure:</strong></p>
+<p><span class="math display">\[J = \sum^N \sum^K r_{nk} || x_n - \mu_k||^2\]</span> <span class="math display">\[ = (1 - 1)^2 + (4-6)^2 + (5-6)^2 + (6-6)^2 + (7-6)^2 + (8-6)^2 + (10-12)^2 + (12-12)^2 + (14-12)^2\]</span> <span class="math display">\[ = 2^2 + 1 + 1 + 2^2 + 2^2 + 2^2\]</span> <span class="math display">\[ = 4 + 2 + 4 + 4 + 4 = 18\]</span></p>
+</div>
+<div id="c" class="section level2">
+<h2>2c</h2>
+<blockquote>
+<p>Repeat the above steps with initial cluster centers c1 = 2, c2 = 7, c3 = 12.</p>
+</blockquote>
+<table>
+<colgroup>
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>Iteration/step</th>
+<th>Cluster 1</th>
+<th>Cluster 2</th>
+<th>Cluster 3</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>0: initialize clusters</td>
+<td><span class="math inline">\(c_1\)</span> = 2</td>
+<td><span class="math inline">\(c_2\)</span> = 7</td>
+<td><span class="math inline">\(c_3\)</span> = 12</td>
+</tr>
+<tr class="even">
+<td>0: assignment</td>
+<td><span class="math inline">\(x_1, x_2\)</span>: {1, 4}</td>
+<td><span class="math inline">\(x_3, x_4, x_5, x_6\)</span>: {5, 6, 7, 8}</td>
+<td><span class="math inline">\(x_7, x_8, x_9\)</span>: {10, 12, 14}</td>
+</tr>
+<tr class="odd">
+<td>1-1: update means</td>
+<td><span class="math inline">\(c_1\)</span> = 2.5</td>
+<td><span class="math inline">\(c_2\)</span> = 6.5</td>
+<td><span class="math inline">\(c_3\)</span> = 12</td>
+</tr>
+<tr class="even">
+<td>1-2: assignment</td>
+<td><span class="math inline">\(x_1, x_2\)</span>: {1, 4}</td>
+<td><span class="math inline">\(x_3, x_4, x_5, x_6\)</span>: {5, 6, 7, 8}</td>
+<td><span class="math inline">\(x_7, x_8, x_9\)</span>: {10, 12, 14}</td>
+</tr>
+<tr class="odd">
+<td>2-1: update means</td>
+<td><span class="math inline">\(c_1\)</span> = 2.5</td>
+<td><span class="math inline">\(c_2\)</span> = 6.5</td>
+<td><span class="math inline">\(c_3\)</span> = 12</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="d" class="section level2">
+<h2>2d</h2>
+<blockquote>
+<p>How many iterations does it take for k-means algorithm to converge in this case? What is the reconstruction error at the end of that iteration?</p>
+</blockquote>
+<p><strong>2 iterations.</strong></p>
+<p><strong>Distortion measure:</strong> <span class="math display">\[J = \sum^N \sum^K r_{nk} || x_n - \mu_k||^2\]</span> <span class="math display">\[ = (1-2.5)^2 + (4-2.5)^2 + (5-6.5)^2 + (6-6.5)^2 + (7-6.5)^2 + (8-6.5)^2 + (10-12)^2 + (12-12)^2 + (14-12)^2\]</span> <span class="math display">\[ = 2.25 + 2.25 + 2.25 + 0.25 + 0.25 + 2.25 + 4 + 4\]</span> <span class="math display">\[ = 9 + 0.5 + 8 = 17.5\]</span></p>
+</div>
+<div id="e" class="section level2">
+<h2>2e</h2>
+<blockquote>
+<p>Comparing (a) with (c), which solution is better? Why?</p>
+</blockquote>
+<p><strong>(c) is better. It converged faster and has lower distortion.</strong></p>
 </div>
 
 
